Revert "Merge the new move generator"